intersection observer animation cleanup

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
         <section class="hero flex justify-between items-center">
             <div class="tags">
-                <h2 class="text-6xl font-bold mb-8">One search at a time...</h2>
+                <h2 class="text-6xl font-bold mb-3">Financial learning<h4 class="text-5xl font-bold mb-8">on the go...</h4></h2>
                 <p class="text-2xl mb-8">Discover & explore the financial world in an educative & interactive way using novel features from Fundle.</p>
                 <button class="btn px-4 py-4">Waiting List</button>
             </div>
