accordion animation done

--- a/index.html
+++ b/index.html
@@ -156,26 +156,34 @@
             <div class="faq-section">
                 <div class="faq-div rounded-lg mb-10">
                     <div class="flex justify-between">
-                        <p class="text-2xl">How does fumble protect my data privacy?</p>
+                        <p class="text-2xl font-bold">How does fumble protect my data privacy?</p>
                         <span class="iconify" data-icon="fa:chevron-circle-right"></span>
                     </div>
-                    <p class="faq-answer text-xl pr-5">Fumble protects your data using some of the leading new generation technology innovations such as blockchain to ensure your data is protected from  commercialization by third parties. Furthermore, fundle ensures that our users are in control of their data at all times</p>
+                    <p class="faq-answer text-2xl pr-5">Fumble protects your data using some of the leading new generation technology innovations such as blockchain to ensure your data is protected from  commercialization by third parties. Furthermore, fundle ensures that our users are in control of their data at all times</p>
                 </div>
 
                 <div class="faq-div rounded-lg mb-10">
                     <div class="flex justify-between">
-                        <p class="text-2xl">How does fumble protect my data privacy?</p>
+                        <p class="text-2xl font-bold">Is Fundle Secure?</p>
                         <span class="iconify" data-icon="fa:chevron-circle-right"></span>
                     </div>
-                    <p class="faq-answer text-xl pr-5">Fumble protects your data using some of the leading new generation technology innovations such as blockchain to ensure your data is protected from  commercialization by third parties. Furthermore, fundle ensures that our users are in control of their data at all times</p>
+                    <p class="faq-answer text-2xl pr-5">We build on some of the most trusted technology infrastructures as used by leading financial institutions & organizations globally. Our security si further beefed up using internal measures and a state of the art legal compliance framework</p>
                 </div>
 
                 <div class="faq-div rounded-lg mb-10">
                     <div class="flex justify-between">
-                        <p class="text-2xl">How does fumble protect my data privacy?</p>
+                        <p class="text-2xl font-bold">Are all features available at no cost?</p>
                         <span class="iconify" data-icon="fa:chevron-circle-right"></span>
                     </div>
-                    <p class="faq-answer text-xl pr-5">Fumble protects your data using some of the leading new generation technology innovations such as blockchain to ensure your data is protected from  commercialization by third parties. Furthermore, fundle ensures that our users are in control of their data at all times</p>
+                    <p class="faq-answer text-2xl pr-5">Yes, all features within all the Fundle mobile & web applications are available to our users at no cost. These include swift search, an e-wallet, data analytics, social banking, e-learning courses and more.</p>
+                </div>
+
+                <div class="faq-div rounded-lg mb-10">
+                    <div class="flex justify-between">
+                        <p class="text-2xl font-bold">What do I get from joining the waiting list?</p>
+                        <span class="iconify" data-icon="fa:chevron-circle-right"></span>
+                    </div>
+                    <p class="faq-answer text-2xl pr-5">By joining the waiting list you join our exclusive community of 1000 beta users who are to help us build the application in public. This involves giving us new ideas & ways we can improve the beta version before it is released to the public later in the year.</p>
                 </div>
             </div>
         </section>
